--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -29,6 +29,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<!--begin::Page Vendors Styles(used by this page) -->
 	<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
+	<link href="assets/plugins/custom/uppy/uppy.bundle.css" rel="stylesheet" type="text/css" />
 
 	<!--end::Page Vendors Styles -->
 
@@ -428,18 +429,20 @@ License: You must have a valid license purchased only from themeforest(the above
 																	<option value="bulumata_12">Bulumata 12"</option>
 																</select>
 															</div>
-															<div class="col-7 kt-margin-0" style="padding:0px">
+															<div class="col-7" style="padding:0px">
 																<div class="input-group">
-																	<label class="col-form-label kt-margin-r-10">Qty :</label>
-																	<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah1_1" placeholder="Jumlah">
+																	<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah1_1" placeholder="0">
 																	<select id="satuan_barang" class="custom-select form-control kt-margin-r-10 input-group-child-normal request_required">
 																		<option selected="">Satuan</option>
 																		<option value="pcs">pcs</option>
 																		<option value="pack">Pack</option>
 																		<option value="box">Box</option>
 																	</select>
-																	<button type="button" class="btn btn-success btn-icon treatment_barang_add" id="1" data-counter="1"><i class="fa fa-plus"></i></button>
+																	<button type="button" class="btn btn-icon btn-link treatment_barang_hapus" id="1" data-counter="1"><i class="fa fa-times"></i></button>
 																</div>
+															</div>
+															<div class="offset-5 col-7 kt-align-right mt-10">
+																<button type="button" class="btn btn-success treatment_barang_add" id="1" data-counter="1"><i class="fa fa-plus"></i>Pemakaian</button>
 															</div>
 														</div>
 													</div>
@@ -450,12 +453,12 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="form-group justify-end">
 											<button type="button" class="btn btn-link" style="padding-right:0px;" id="treatment_add"><i class="flaticon-add"></i>Tambah Treatment</button>
 										</div>
-										<div class="form-group row">
-											<label for="example-text-input" class="col-4 col-form-label">Foto</label>
-											<div class="col-8">
-												<div class="custom-file">
-													<input type="file" class="custom-file-input request_required" name="treatment_foto" id="treatment_foto" accept="image/*">
-													<label class="custom-file-label" for="treatment_foto">Choose file</label>
+										<div class="form-group">
+											<label for="example-text-input" class="col-form-label">Foto</label>
+											<div class="">
+												<div class="kt-uppy" id="kt_uppy_2">
+													<div class="kt-uppy__dashboard"></div>
+													<div class="kt-uppy__progress"></div>
 												</div>
 											</div>
 										</div>
@@ -545,6 +548,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <!--begin::Page Scripts(used by this page) -->
 <script src="assets/js/script/datatable_therapist.js"></script>
+<script src="assets/plugins/custom/uppy/uppy.bundle.js" type="text/javascript"></script>
 
 <script>
 			// Print function
@@ -580,15 +584,17 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 					<div class="col-7 kt-margin-0" style="padding:0px">
 					<div class="input-group">
-					<label class="col-form-label kt-margin-r-10">Qty :</label>
-					<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah`+ i +`_1" placeholder="Jumlah">
+					<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah`+ i +`_1" placeholder="0">
 					<select id="satuan_barang" class="custom-select form-control kt-margin-r-10 input-group-child-normal request_required">
 					<option selected="">Satuan</option>
 					<option value="pcs">pcs</option>
 					<option value="pack">Pack</option>
 					<option value="box">Box</option>
 					</select>
-					<button type="button" class="btn btn-success btn-icon treatment_barang_add" id="`+ i +`" data-counter="1"><i class="fa fa-plus"></i></button>
+					<button type="button" class="btn btn-icon btn-link treatment_barang_hapus" id="`+ i +`" data-counter="1"><i class="fa fa-times"></i></button>
+					</div>
+					<div class="offset-5 col-7 kt-align-right mt-10">
+					<button type="button" class="btn btn-success treatment_barang_add" id="`+ i +`" data-counter="1"><i class="fa fa-plus"></i>Pemakaian</button>
 					</div>
 					</div>
 					</div>
@@ -619,8 +625,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					
 					<div class="col-7 kt-margin-0" style="padding:0px">
 					<div class="input-group">
-					<label class="col-form-label kt-margin-r-10">Qty :</label>
-					<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah`+ barang_counter +`_`+ counter +`" placeholder="Jumlah">
+					<input type="number" min="1" class="form-control kt-margin-r-10 input-group-child-normal request_required" name="treatment_barang_jumlah`+ barang_counter +`_`+ counter +`" placeholder="0">
 
 					<select name="satuan_barang" class="custom-select form-control kt-margin-r-10 input-group-child-normal request_required">
 					<option selected="">Satuan</option>
@@ -628,6 +633,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<option value="pack">Pack</option>
 					<option value="box">Box</option>
 					</select>
+					<button type="button" class="btn btn-icon btn-link treatment_barang_hapus" id="`+ i +`" data-counter="1"><i class="fa fa-times"></i></button>
 					</div>
 					</div>
 					</div>
@@ -658,6 +664,83 @@ License: You must have a valid license purchased only from themeforest(the above
 			});
 
 			$('#kt_form_treatment_selesai').validate();
+		</script>
+
+		<script>
+			"use strict";
+
+			var KTUppy = function () {
+				const Tus = Uppy.Tus;
+				const ProgressBar = Uppy.ProgressBar;
+				const StatusBar = Uppy.StatusBar;
+				const FileInput = Uppy.FileInput;
+				const Informer = Uppy.Informer;
+
+
+				const Dashboard = Uppy.Dashboard;
+				const Dropbox = Uppy.Dropbox;
+				const GoogleDrive = Uppy.GoogleDrive;
+				const Instagram = Uppy.Instagram;
+				const Webcam = Uppy.Webcam;
+
+
+
+				var initUppy2 = function(){
+					var id = '#kt_uppy_2';
+
+					var options = {
+						proudlyDisplayPoweredByUppy: false,
+						target: id,
+						inline: true,
+						replaceTargetContent: true,
+						showProgressDetails: true,
+						note: 'Images and video only, 2–3 files, up to 1 MB',
+						height: 470,
+						metaFields: [
+						{ id: 'name', name: 'Name', placeholder: 'file name' },
+						{ id: 'caption', name: 'Caption', placeholder: 'describe what the image is about' }
+						],
+						browserBackButtonClose: true
+					}
+
+					var uppyDashboard = Uppy.Core({ 
+						autoProceed: true,
+						restrictions: {
+							maxFileSize: 1000000, 
+							maxNumberOfFiles: 5,
+							minNumberOfFiles: 1,
+							allowedFileTypes: ['image/*', 'video/*']
+						} 
+					});
+
+					uppyDashboard.use(Dashboard, options);  
+					uppyDashboard.use(Tus, { endpoint: 'https://master.tus.io/files/' });
+				}
+
+
+				return {
+
+					init: function() {
+						initUppy2();
+
+						swal.fire({
+							"title": "Notice", 
+							"html": "Uppy demos uses <b>https://master.tus.io/files/</b> URL for resumable upload examples and your uploaded files will be temporarely stored in <b>tus.io</b> servers.", 
+							"type": "info",
+							"buttonsStyling": false,
+							"confirmButtonClass": "btn btn-brand kt-btn kt-btn--wide",
+							"confirmButtonText": "Ok, I understand",
+							"onClose": function(e) {
+								console.log('on close event fired!');
+							}
+						});
+					}
+				};
+			}();
+
+			KTUtil.ready(function() {	
+				KTUppy.init();
+			});
 		</script>
 
 		<!--end::Page Scripts -->
