--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -378,14 +378,26 @@ License: You must have a valid license purchased only from themeforest(the above
 											</tr>
 										</table>
 									</div>
-									<div class="col-sm-6 justify-end" style="padding-left:0px">
+									<!-- <div class="col-sm-6 justify-end" style="padding-left:0px">
 										<div class="col-5" style="padding: 0px">
-											<button type="button" class="btn btn-success col-12" data-toggle="modal" data-target="#kt_modal_treatment_selesai">Selesai</buttton>
-											</div>
+											<button type="button" class="btn btn-success col-12" data-toggle="modal" data-target="#kt_modal_treatment_selesai">
+												Selesai
+											</buttton>
+										</div>
+									</div> -->
+									<div class="container">
+										<div class="text-right">
+											<button class="btn btn-secondary">
+												Cancel
+											</button>
+											<button type="button" class="btn btn-success" data-toggle="modal" data-target="#kt_modal_treatment_selesai">
+												Selesai
+											</buttton>
 										</div>
 									</div>
 								</div>
 							</div>
+						</div>
 
 							<!--end::Portlet-->
 						</div>
@@ -455,11 +467,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="form-group">
 											<label for="example-text-input" class="col-form-label">Foto</label>
-											<div class="">
-												<div class="kt-uppy" id="kt_uppy_2">
-													<div class="kt-uppy__dashboard"></div>
-													<div class="kt-uppy__progress"></div>
-												</div>
+											<div class="kt-uppy" id="kt_uppy_2">
+												<div class="kt-uppy__dashboard"></div>
+												<div class="kt-uppy__progress"></div>
 											</div>
 										</div>
 									</div>
